# crypto-fetcher

./: .gitignore  README.md  pyproject.toml
crypto_fetcher/: __init__.py  cli.py  fetcher.py  formatters.py
tests/: __init__.py  test_fetcher.py
