[project]
name = "crypto-fetcher"
version = "0.1.0"
description = "A CLI tool to fetch cryptocurrency data using CCXT"
authors = [
    {name = "Crypto Fetcher", email = "crypto-fetcher@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ccxt>=4.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "tabulate>=0.9.0",
]

[project.scripts]
crypto-fetcher = "crypto_fetcher.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
